<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/location_activity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/location_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/location_lat" />
        <TextView
            android:id="@+id/location_lat_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/location_lat"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/location_lat"
            android:text="@string/location_val_def"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/location_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/location_lon"/>
        <TextView
            android:id="@+id/location_lon_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/location_lon"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/location_lon"
            android:text="@string/location_val_def"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/location_alt" />

        <TextView
            android:id="@+id/location_alt_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/location_alt"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/location_alt"
            android:text="@string/location_val_def"
            />
    </RelativeLayout>


</LinearLayout>